deploy/cloudflare-access-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-access-controller
  labels:
    app: cloudflare-access-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-access-controller
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: cloudflare-access-controller
      labels:
        app: cloudflare-access-controller
    spec:
      serviceAccountName: cloudflare-access-controller
      containers:
        - name: cac
          image: dingggu/cloudflare-access-controller:0.1.0
          imagePullPolicy: Always
          args:
            - -z
            - "cloudflare.zone.name.com"
            - -c
            - "identifier.for.cluster.name"
            - -i
            - "60"
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
